--- a/spec/.eslintrc.json
+++ b/spec/.eslintrc.json
@@ -26,6 +26,9 @@
       "fit_exclude_mongodb_version": true,
       "fit_exclude_node_version": true,
       "it_exclude_dbs": true,
+      "it_retry": true,
+      "fit_retry": true,
+      "currentSpec": true,
       "describe_only_db": true,
       "describe_only": true,
       "on_db": true,
