--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-server",
-  "version": "6.3.0-beta.1",
+  "version": "6.3.0-alpha.2",
   "description": "An express module providing a Parse-compatible API server",
   "main": "lib/index.js",
   "repository": {
@@ -55,7 +55,7 @@
     "pluralize": "8.0.0",
     "rate-limit-redis": "3.0.2",
     "redis": "4.6.6",
-    "semver": "7.5.1",
+    "semver": "7.5.2",
     "subscriptions-transport-ws": "0.11.0",
     "tv4": "1.3.0",
     "uuid": "9.0.0",
