--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
+    "@apollo/server": "4.9.2",
     "@babel/eslint-parser": "7.21.8",
     "@graphql-tools/merge": "8.4.1",
     "@graphql-tools/schema": "9.0.4",
     "@graphql-tools/utils": "8.12.0",
-    "@graphql-yoga/node": "2.6.0",
+    "@graphql-yoga/render-graphiql": "4.0.4",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.2.0",
     "bcryptjs": "2.4.3",
@@ -38,6 +39,7 @@
     "graphql-list-fields": "2.0.2",
     "graphql-relay": "0.10.0",
     "graphql-tag": "2.12.6",
+    "graphql-upload": "15.0.2",
     "intersect": "1.0.1",
     "ip-range-check": "0.2.0",
     "jsonwebtoken": "9.0.0",
