--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-server",
-  "version": "7.0.0-alpha.19",
+  "version": "6.3.0-beta.1",
   "description": "An express module providing a Parse-compatible API server",
   "main": "lib/index.js",
   "repository": {
@@ -24,8 +24,8 @@
     "@graphql-tools/schema": "9.0.4",
     "@graphql-tools/utils": "8.12.0",
     "@graphql-yoga/node": "2.6.0",
-    "@parse/fs-files-adapter": "2.0.1",
-    "@parse/push-adapter": "5.0.2",
+    "@parse/fs-files-adapter": "1.2.2",
+    "@parse/push-adapter": "4.1.3",
     "bcryptjs": "2.4.3",
     "body-parser": "1.20.2",
     "commander": "10.0.1",
@@ -33,35 +33,35 @@
     "deepcopy": "2.1.0",
     "express": "4.18.2",
     "express-rate-limit": "6.7.0",
-    "follow-redirects": "1.15.4",
-    "graphql": "16.8.1",
+    "follow-redirects": "1.15.2",
+    "graphql": "16.6.0",
     "graphql-list-fields": "2.0.2",
     "graphql-relay": "0.10.0",
     "graphql-tag": "2.12.6",
     "intersect": "1.0.1",
+    "ip-range-check": "0.2.0",
     "jsonwebtoken": "9.0.0",
+    "jwks-rsa": "2.1.5",
     "ldapjs": "3.0.2",
-    "jwks-rsa": "3.1.0",
     "lodash": "4.17.21",
-    "lru-cache": "10.1.0",
+    "lru-cache": "9.1.1",
     "mime": "3.0.0",
-    "mongodb": "5.9.0",
+    "mongodb": "4.10.0",
     "mustache": "4.2.0",
-    "otpauth": "9.2.1",
     "parse": "4.1.0",
     "path-to-regexp": "6.2.1",
     "pg-monitor": "2.0.0",
-    "pg-promise": "11.5.4",
+    "pg-promise": "11.5.0",
     "pluralize": "8.0.0",
     "rate-limit-redis": "3.0.2",
-    "redis": "4.6.11",
-    "semver": "7.5.2",
+    "redis": "4.6.6",
+    "semver": "7.5.1",
     "subscriptions-transport-ws": "0.11.0",
     "tv4": "1.3.0",
     "uuid": "9.0.0",
     "winston": "3.8.2",
     "winston-daily-rotate-file": "4.7.1",
-    "ws": "8.15.1"
+    "ws": "8.13.0"
   },
   "devDependencies": {
     "@actions/core": "1.9.1",
@@ -80,6 +80,7 @@
     "@semantic-release/release-notes-generator": "9.0.3",
     "all-node-versions": "11.3.0",
     "apollo-upload-client": "17.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "clean-jsdoc-theme": "4.2.7",
     "cross-env": "7.0.2",
     "deep-diff": "1.0.2",
@@ -97,7 +98,7 @@
     "madge": "5.0.1",
     "mock-files-adapter": "file:spec/dependencies/mock-files-adapter",
     "mock-mail-adapter": "file:spec/dependencies/mock-mail-adapter",
-    "mongodb-runner": "5.4.4",
+    "mongodb-runner": "4.8.1",
     "mongodb-version-list": "1.0.0",
     "node-abort-controller": "3.0.1",
     "node-fetch": "3.2.10",
@@ -116,18 +117,18 @@
     "lint-fix": "eslint --fix --cache ./",
     "build": "babel src/ -d lib/ --copy-files",
     "watch": "babel --watch src/ -d lib/ --copy-files",
-    "test:mongodb:runnerstart": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=$npm_config_dbversion} MONGODB_TOPOLOGY=${MONGODB_TOPOLOGY:=standalone} mongodb-runner start -t ${MONGODB_TOPOLOGY} --version ${MONGODB_VERSION} -- --port 27017",
+    "test:mongodb:runnerstart": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=$npm_config_dbversion} MONGODB_TOPOLOGY=${MONGODB_TOPOLOGY:=standalone} mongodb-runner start",
     "test:mongodb:testonly": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=$npm_config_dbversion} MONGODB_TOPOLOGY=${MONGODB_TOPOLOGY:=standalone} TESTING=1 jasmine",
     "test:mongodb": "npm run test:mongodb:runnerstart --dbversion=$npm_config_dbversion && npm run test:mongodb:testonly --dbversion=$npm_config_dbversion",
     "test:mongodb:4.2.19": "npm run test:mongodb --dbversion=4.2.19",
     "test:mongodb:4.4.13": "npm run test:mongodb --dbversion=4.4.13",
     "test:mongodb:5.3.2": "npm run test:mongodb --dbversion=5.3.2",
     "test:mongodb:6.0.2": "npm run test:mongodb --dbversion=6.0.2",
-    "test:mongodb:7.0.1": "npm run test:mongodb --dbversion=7.0.1",
-    "pretest": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=5.3.2} MONGODB_TOPOLOGY=${MONGODB_TOPOLOGY:=standalone} mongodb-runner start -t ${MONGODB_TOPOLOGY} --version ${MONGODB_VERSION} -- --port 27017",
+    "posttest:mongodb": "mongodb-runner stop",
+    "pretest": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=5.3.2} MONGODB_TOPOLOGY=${MONGODB_TOPOLOGY:=standalone} mongodb-runner start",
     "testonly": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=5.3.2} MONGODB_TOPOLOGY=${MONGODB_TOPOLOGY:=standalone} TESTING=1 jasmine",
     "test": "npm run testonly",
-    "posttest": "cross-env mongodb-runner stop --all",
+    "posttest": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=5.3.2} MONGODB_TOPOLOGY=${MONGODB_TOPOLOGY:=standalone} mongodb-runner stop",
     "coverage": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=5.3.2} MONGODB_TOPOLOGY=${MONGODB_TOPOLOGY:=standalone} TESTING=1 nyc jasmine",
     "start": "node ./bin/parse-server",
     "prettier": "prettier --write {src,spec}/{**/*,*}.js",
@@ -136,7 +137,7 @@
     "madge:circular": "node_modules/.bin/madge ./src --circular"
   },
   "engines": {
-    "node": ">=18.0.0 <21"
+    "node": ">=14.21.0 <17 || >=18 <19"
   },
   "bin": {
     "parse-server": "bin/parse-server"
